samples/_failures_safe/1761320371_57d9a9_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_10bc0e23.c: In function ‘parse_string’:
./samples/SAFE/__tmp_10bc0e23.c:179:22: error: expected ‘]’ at end of input
  179 |     buffer[buffer_pos
      |                      ^
      |                      ]
./samples/SAFE/__tmp_10bc0e23.c:179:5: error: expected declaration or statement at end of input
  179 |     buffer[buffer_pos
      |     ^~~~~~
